feat: Refactor analysis structure and UI
Updates the data structure for analysis results to better represent literal meaning, emotional subtext, and suggested responses. Adjusts the UI to accommodate these changes, including modifications to the Tailwind CSS configuration for improved styling and a new toggle for "deep context" analysis. The `geminiService` is updated to match the new schema, and the `InputSection` and `AnalysisDashboard` components are refactored to handle the new data format and features.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
             },
+            lineHeight: {
+              'relaxed': '1.6',
+            },
             colors: {
               sage: {
                 50: '#F4F7F4',
@@ -29,7 +32,7 @@
                 900: '#263523',
               },
               cream: {
-                50: '#FDFCF8', // Main BG
+                50: '#FAFAF9', // Updated Soft Cream
                 100: '#F9F6F0',
                 200: '#F0EAD6',
                 300: '#E5E0D8',
@@ -42,7 +45,7 @@
     </script>
     <style>
       body {
-        background-color: #FDFCF8;
+        background-color: #FAFAF9;
         color: #2F412B;
       }
       /* Custom Scrollbar for sensory friendliness */
@@ -50,7 +53,7 @@
         width: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #FDFCF8; 
+        background: #FAFAF9; 
       }
       ::-webkit-scrollbar-thumb {
         background: #C5D6C5; 
